# AccompanAIment

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/datasets/: accompaniments_50.json  chord_progressions.json
backend/docs/: API.md  DEPLOYMENT.md  MUSIC_THEORY.md
backend/scripts/: check_eval_thresholds.py  generate_eval_dataset.py  health_check.py  performance_benchmark.py  run_musician_evals.py  seed_chord_library.py  seed_sample_songs.py  seed_styles.py  train_agent.py
backend/src/: celery_app.py  config.py  main.py
backend/src/agents/: arrangement_agent.py  prompts.py  style_agent.py
backend/src/api/: auth.py  middleware.py  routes.py  websocket.py
backend/src/audio/: audio_utils.py  crepe_extractor.py  melody_cache.py  pitch_processor.py  upload_handler.py
backend/src/db/: models.py  postgres.py
backend/src/evals/: __init__.py  dataset.py  metrics.py  musician_eval.py  report_generator.py
backend/src/generation/: __init__.py  audio_renderer.py  format_converter.py  sheet_generator.py
backend/src/llm/: ollama_client.py  prompt_templates.py  response_parser.py
backend/src/music/: chord_parser.py  chord_validator.py  harmony_generator.py  midi_generator.py  music_utils.py  style_templates.py  voicing_generator.py
backend/src/observability/: __init__.py  metrics.py  telemetry.py
backend/src/storage/: filesystem_storage.py  minio_storage.py
backend/src/workers/: format_worker.py  generation_worker.py  (+1 more)
backend/tests/: conftest.py  test_api.py  test_audio_rendering.py  test_audio_upload.py  test_chord_validation.py  test_db.py  test_format_converter.py  test_harmony_generator.py  test_llm.py  test_llm_agent.py  test_melody_cache.py  test_melody_extraction.py  test_middleware.py  test_midi_generation.py  test_music_utils.py  test_musician_eval_class.py  test_musician_evals.py  test_observability.py  test_pitch_processor.py  test_sheet_generation.py  test_storage.py  test_style_templates.py  test_upload_handler.py  test_voicing_generation.py  test_websocket.py  test_workers.py
(+41 files in other folders)
